--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "material-icons": "^1.11.11",
+    "vue": "^3.2.39",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
