--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "material-icons": "^1.11.11",
     "vue": "^3.2.39",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
